--- a/Immersion.csproj
+++ b/Immersion.csproj
@@ -60,7 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="**\*.cs" />
+    <Compile Include="Scenes\**\*.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="json-ld.net">
